--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,6 +3,7 @@
 
 body {
     background-color: #f0f0f0;
+    
 }
 
 .title {
@@ -10,6 +11,6 @@ body {
     font-family:'Vollkorn', serif;
 }
 
-.nav-item {
+.nav-item, h2 {
      font-family:'Vollkorn', serif;
 }
