--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,59 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+     
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light border-bottom border-dark">
-        <div class="container">
-          <a class="navbar-brand" href="/"><%= image_tag 'logo.png', size: '80x80' %></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-            <% if admin_signed_in? %>
-              <li class="nav-item mr-2">
-                <%= link_to "users", admin_users_path, class: 'nav-link text-dark'%>
-                
-              </li>
-              <li class="nav-item mr-2">
-                <%=  link_to "posts", admin_posts_path, class: 'nav-link text-dark'%>
-              </li>
-              <li class="nav-item mr-2">
-                <%= link_to "Log out", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
-              </li>
-            <% elsif user_signed_in? %>
-              <li class="nav-item mr-2">
-                <%= link_to "mypage", user_path(current_user), class: 'nav-link text-dark' %>
-                
-              </li>
-              <li class="nav-item mr-2">
-                <%= link_to "users", users_path, class: 'nav-link text-dark' %>
-              </li>
-              <li class="nav-item mr-2">
-                <%= link_to "posts", posts_path, class: 'nav-link text-dark' %>
-              </li>
-              <li class="nav-item mr-2">
-                <%= link_to " Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
-              </li>
-            <% else %>
-              <li class="nav-item mr-2">
-                <%= link_to "Sign up", new_user_registration_path ,class: 'nav-link text-dark' %>
-              </li>
-              <li class="nav-item mr-2">
-                <%= link_to "Log in", new_user_session_path ,class: 'nav-link text-dark' %>
-              </li>
-            <% end %>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <%= render "layouts/header" %>
      <p class="notice"><%= notice %></p>　
     <%= yield %>
   </body>
