--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -1,7 +1,7 @@
  <div>
    <div class="row">
       <div class="col-6 mx-auto py-5">
-        <h2>Follower Users</h2>
+        <h2 class="text-center">Follower Users</h2>
         <% if @users.exists? %>
           <table class='table table-hover text-center'>
             <thead>
